Major corrections to the SComatic pipeline

--- a/SComatic/Dockerfile
+++ b/SComatic/Dockerfile
@@ -70,7 +70,7 @@ RUN gunzip RNAediting/AllEditingSites.hg38.txt.gz
 WORKDIR /opt
 RUN apt-get update && apt-get install -y procps default-jre default-jdk
 ## only up to this version to work with kallisto_nextflow.nf pipeline
-ENV NXF_VER=22.10.6
+##ENV NXF_VER=22.10.6
 RUN wget -qO- https://get.nextflow.io | bash
 RUN chmod +x nextflow
 ## add nextflow to path
@@ -80,7 +80,7 @@ WORKDIR /
 VOLUME /rootvol
 WORKDIR /rootvol
 RUN mv /opt/SComatic ./
-#ENTRYPOINT ["nextflow"]
+ENTRYPOINT ["nextflow"]
 
 
 
